--- a/post/package.json
+++ b/post/package.json
@@ -10,15 +10,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/mongoose": "^5.11.97",
-        "@types/node": "^20.8.9",
         "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
         "keycloak-connect": "^22.0.5",
         "mongoose": "^8.0.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
-        "@types/express": "^4.17.20"
+        "@types/express": "^4.17.20",
+        "@types/mongoose": "^5.11.97",
+        "@types/node": "^20.8.9"
     }
 }
