--- a/post/package.json
+++ b/post/package.json
@@ -5,22 +5,31 @@
     "main": "index.js",
     "scripts": {
         "start": "npx ts-node src/server.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
+        "express-winston": "^4.2.0",
+        "jest": "^29.7.0",
+        "jsonwebtoken": "^9.0.2",
         "keycloak-connect": "^22.0.5",
         "mongoose": "^8.0.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.20",
+        "@types/jest": "^29.5.7",
+        "@types/jsonwebtoken": "^9.0.4",
         "@types/mongoose": "^5.11.97",
-        "@types/node": "^20.8.9"
+        "@types/node": "^20.8.9",
+        "@types/supertest": "^2.0.15",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1"
     }
 }
