--- a/services/post/docker-compose.yaml
+++ b/services/post/docker-compose.yaml
@@ -13,32 +13,15 @@ services:
         networks:
             - post-network
 
-    post-microservice:
-        image: sjkchang/chatwave-post-service
+    rabbitmq:
+        image: rabbitmq:3.9.7-management-alpine
+        restart: always
         ports:
-            - 5000:3000
+            - "5672:5672"
+            - "15672:15672"
         environment:
-            PORT: 3000
-
-            MONGO_HOST: mongo
-            MONGO_PORT: 27017
-            MONGO_USERNAME: root
-            MONGO_PASSWORD: password
-            MONGO_URL: mongodb://mongo:27017
-            MONGO_DB_NAME: postDB
-
-            AMQP_URL: amqp://host.docker.internal
-
-            KEYCLOAK_CLIENT_ID: microblog-interface
-            KEYCLOAK_SERVER_URL: http://host.docker.internal:8080/auth
-            KEYCLOAK_REALM: microblog-realm
-            KEYCLOAK_CLIENT_SECRET: rHHtKZJDb8SrfvrQktuIBC9n73qlEiLa
-            KEYCLOAK_AUTH_SERVER_URL: http://host.docker.internal:8080/auth
-            KEYCLOAK_RESOURCE: post-microservice
-        depends_on:
-            - mongo
-        networks:
-            - post-network
+            RABBITMQ_DEFAULT_USER: "guest"
+            RABBITMQ_DEFAULT_PASS: "guest"
 
 networks:
     post-network:
