--- a/services/post/package.json
+++ b/services/post/package.json
@@ -15,17 +15,15 @@
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "express-validator": "^7.0.1",
-        "express-winston": "^4.2.0",
         "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
-        "keycloak-connect": "^22.0.5",
         "mongoose": "^8.0.0",
+        "openid-client": "^5.6.1",
         "pino": "^8.16.2",
         "pino-pretty": "^10.2.3",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2",
-        "uuid": "^9.0.1",
-        "winston": "^3.11.0"
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/amqplib": "^0.10.4",
