--- a/services/follow/package.json
+++ b/services/follow/package.json
@@ -11,10 +11,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/openid-client": "^3.7.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "keycloak-connect": "^22.0.5",
         "neo4j-driver": "^5.14.0",
+        "openid-client": "^5.6.1",
         "pino": "^8.16.2",
         "pino-pretty": "^10.2.3",
         "ts-node": "^10.9.1",
