Got everything running with docker compose + supporting infra

--- a/follow/Dockerfile
+++ b/follow/Dockerfile
@@ -1,35 +1,28 @@
-# Use a Node.js base image
-FROM node:16 as builder
+# Step 1: Use an official Node.js runtime as a parent image
+FROM node:18
 
-# Set the working directory
+# Step 2: Set the working directory in the container
 WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json (or yarn.lock)
+# Step 3: Copy package.json and package-lock.json (or yarn.lock) files
 COPY package*.json ./
+# If you're using yarn, you can instead do:
+# COPY package.json yarn.lock ./
 
-# Install dependencies
+# Step 4: Install dependencies
+# If using npm:
 RUN npm install
+# If you're using yarn, use:
+# RUN yarn install --frozen-lockfile
 
-# Copy source files
+# Step 5: Bundle the application source inside the Docker image
 COPY . .
 
-# Compile TypeScript to JavaScript
+# Step 6: Build the application if it needs a build step
 RUN npm run build
 
-# Start a new stage to create a lightweight final image
-FROM node:16-slim
-
-WORKDIR /usr/src/app
-
-# Copy built assets from the builder stage
-COPY --from=builder /usr/src/app/dist ./dist
-COPY --from=builder /usr/src/app/package*.json ./
-
-# Install production dependencies
-RUN npm install --only=production
-
-# Expose the port the app runs on
+# Step 7: Your application runs on port 3000 by default, expose it
 EXPOSE 3000
 
-# Command to run the app
-CMD ["node", "dist/server.js"]
+# Step 8: Define the command to run the app
+CMD ["node", "dist/main"]
