--- a/post/package.json
+++ b/post/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "amqplib": "^0.10.3",
+    "class-validator": "^0.14.0",
     "mongoose": "^8.0.1",
     "openid-client": "^5.6.1",
     "reflect-metadata": "^0.1.13",
