--- a/feed/package.json
+++ b/feed/package.json
@@ -25,6 +25,7 @@
     "@nestjs/microservices": "^10.2.10",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.16",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
     "axios": "^1.6.2",
