Combined api docs. Finalized docker compose file. Made small fix to feed service

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    location /posts/ {
+    location /post-service/ {
         proxy_pass http://post-service:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -9,7 +9,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /users/ {
+    location /follow-service/ {
         proxy_pass http://follow-service:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -17,7 +17,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /feed/ {
+    location /feed-service/ {
         proxy_pass http://feed-service:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
