--- a/post/package.json
+++ b/post/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -27,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "amqplib": "^0.10.3",
+    "cache-manager": "^5.3.1",
     "class-validator": "^0.14.0",
     "mongoose": "^8.0.1",
     "openid-client": "^5.6.1",
