--- a/follow/package.json
+++ b/follow/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@types/openid-client": "^3.7.0",
+    "cache-manager": "^5.3.1",
+    "cache-manager-redis-store": "^2.0.0",
     "neo4j-driver": "^5.14.0",
     "openid-client": "^5.6.1",
     "reflect-metadata": "^0.1.13",
@@ -35,6 +37,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
