--- a/post/package.json
+++ b/post/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^7.1.16",
     "amqplib": "^0.10.3",
     "cache-manager": "^5.3.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-validator": "^0.14.0",
     "mongoose": "^8.0.1",
     "openid-client": "^5.6.1",
@@ -40,6 +41,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/amqplib": "^0.10.4",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.97",
