--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@auth0/nextjs-auth0": "^3.3.0",
     "date-fns": "^2.30.0",
     "next": "14.0.3",
+    "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
