--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,6 +89,27 @@ services:
         networks:
             - nginx-network
 
+    interface:
+        image: sjkchang/chatwave-interface
+        ports:
+            - "3000:3000"
+        environment:
+            API_BASE_URL: "http://nginx:80"
+
+            AUTH0_SECRET: ${AUTH0_SECRET}
+            AUTH0_BASE_URL: ${AUTH0_BASE_URL}
+            AUTH0_ISSUER_BASE_URL: ${AUTH0_SERVER_URL}
+            AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
+            AUTH0_CLIENT_SECRET: ${AUTH0_CLIENT_SECRET}
+
+            AUTH0_MANAGEMENT_CLIENT_ID: ${AUTH0_MANAGEMENT_CLIENT_ID}
+            AUTH0_MANAGEMENT_CLIENT_SECRET: ${AUTH0_MANAGEMENT_CLIENT_SECRET}
+            AUTH0_MANAGEMENT_AUDIENCE: ${AUTH0_MANAGEMENT_AUDIENCE}
+
+            OPENAI_API_KEY: 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
+        networks:
+            - nginx-network
+
 volumes:
     neo4j_data:
     neo4j_logs:
