--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
     "@auth0/nextjs-auth0": "^3.3.0",
+    "@vercel/analytics": "^1.1.1",
     "date-fns": "^2.30.0",
     "next": "14.0.3",
     "openai": "^4.20.1",
